--- a/pages/vehicles/assets/css/style.css
+++ b/pages/vehicles/assets/css/style.css
@@ -1,8 +1,8 @@
-.Navigation
+.navigation
 {
-.navbar
+.bg
 {
-    background-color: white!important;
+    background-color: rgb(40, 100, 128) !important;
 }
-
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
