--- a/pages/aboutUs/assets/css/style.css
+++ b/pages/aboutUs/assets/css/style.css
@@ -49,3 +49,14 @@ font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans
     line-height: 2rem;
 }
 }
+
+.nav-item
+{
+    font-size: 1.5rem;
+    padding-right: 1rem;
+}
+
+.nav-icon
+{
+    padding-right: 1rem;
+}
