--- a/pages/hondaCivicSedan/assets/css/style.css
+++ b/pages/hondaCivicSedan/assets/css/style.css
@@ -6,3 +6,14 @@
 }
 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
+.nav-item
+{
+    font-size: 1.5rem;
+    padding-right: 1rem;
+}
+
+.nav-icon
+{
+    padding-right: 1rem;
+}
