--- a/pages/contactUs/assets/css/style.css
+++ b/pages/contactUs/assets/css/style.css
@@ -28,3 +28,9 @@ font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans
     text-align: center;
     margin: 3rem;
 }
+
+.alternate
+{
+    text-align: center;
+    margin: 3rem;
+}
